# FeedbackService

./: .gitignore  Makefile  pyproject.toml
core/apps/products/: admin.py
core/apps/products/entities/: products.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/apps/products/services/: products.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: storages.yaml
