[tool.poetry]
name = "market"
version = "0.1.0"
description = ""
authors = ["Kirill Mikhailov <kicode@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
psycopg2 = "^2.9.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
